--- a/demo1/pages/demo10/demo10.wxml
+++ b/demo1/pages/demo10/demo10.wxml
@@ -1,2 +1,7 @@
-<!--pages/demo10/demo10.wxml-->
-<text>pages/demo10/demo10.wxml</text>
+<!-- 
+  rich-text 富文本标签
+  1 nodes属性来实现
+    1 接收标签字符串 
+    2 接收对象数组 
+ -->
+ <rich-text nodes="{{html}}"></rich-text>
