--- a/pinyougou/pages/index/index.wxml
+++ b/pinyougou/pages/index/index.wxml
@@ -1,1 +1,48 @@
-<view>首页</view>
+<view class="pyg_index">
+    <SearchInput></SearchInput>
+    <!-- 轮播图 -->
+    <view class="index_swiper">
+        <!-- 
+            1、swiper标签存在默认宽度和高度  100% * 150px
+            2、image标签也存在默认宽度和高度 320px * 240px
+            3、设计图片和轮播图
+                1 原图的宽高  750px * 340px
+                2 让图片高度自适应 宽度 100%
+            4、图片标签
+                mode标签 渲染模式
+                 widthFix 让图片的标签宽高 和 图片标签的内容的宽高都等比例的发生变化
+         -->
+        <swiper autoplay indicator-dots circalur>
+            <swiper-item wx:for="{{swiperList}}" wx:key="{{goods_id}}">
+                <navigator>
+                    <image mode="widthFix" src="{{item.image_src}}"></image>
+                </navigator>
+            </swiper-item>
+        </swiper>
+    </view>
+    <view class="index_cates">
+        <navigator wx:for="{{catesList}}" wx:key="{{name}}">
+            <image mode="widthFix" src="{{item.image_src}}"></image>
+        </navigator>
+    </view>
+    <view class="index_floor">
+        <view class="floor_group"
+            wx:for="{{floorList}}"
+            wx:for-item="item1"
+            wx:for-index="index1"
+            wx:key:="floor_title">
+            <view class="floor_title">
+                <image mode="widthFix" src="{{item1.floor_title.image_src}}"></image>
+            </view>
+            <view class="floor_list">
+                <navigator 
+                    wx:for="{{item1.product_list}}"
+                    wx:for-item="item2"
+                    wx:for-index="index2"
+                    wx:key="name">
+                    <image mode="{{index2===0?'widthFix':'scaleToFill'}}" src="{{item2.image_src}}"></image>
+                </navigator>
+            </view>
+        </view>
+    </view>
+</view>
