商品分类模块

--- a/pinyougou/pages/index/index.less
+++ b/pinyougou/pages/index/index.less
@@ -34,6 +34,7 @@
                 &:nth-last-child(-n+4){
                     height:33.33vw * 386 / 232 / 2;
                     border-left: 10rpx solid #fff;
+                    box-sizing: border-box;
                 }
                 &:nth-child(2),
                 &:nth-child(3){
