--- a/pinyougou/pages/index/index.wxss
+++ b/pinyougou/pages/index/index.wxss
@@ -31,6 +31,7 @@
 .index_floor .floor_group .floor_list navigator:nth-last-child(-n+4) {
   height: 27.72711207vw;
   border-left: 10rpx solid #fff;
+  box-sizing: border-box;
 }
 .index_floor .floor_group .floor_list navigator:nth-child(2),
 .index_floor .floor_group .floor_list navigator:nth-child(3) {
